--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/hlbbs/DAO/PostDAO.java=UTF-8
+encoding//src/com/hlbbs/DAO/UserDAO.java=UTF-8
 encoding//src/com/hlbbs/Modal/Post.java=UTF-8
